--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "aws-sdk": "^2.390.0",
     "core-js": "^2.5.4",
+    "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
